# cad_geometry

./: .gitmodules  CMakeLists.txt  README.md
include/: RTree.h  ait.hpp  fastrtree.h  geometry.hpp  rtree_adapter.hpp  rtree_queue.hpp  treap.hpp
src/: ait.cxx  base.cxx  rtree_adapter.cxx  rtree_queue.cxx  rtree_queue_2.cxx  rtree_queue_filter.cxx  treap.cxx
test/: CMakeLists.txt  generators.hpp  test.cxx  test_ait.cxx  test_fastrtree.cxx  test_rtree.cxx  test_rtree_queue.cxx  test_treap.cxx
